criando as cartas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
         <img src="./assets/logotipo.svg" alt="Logo do jogo" />
         <span class="stats">0 acertos de 0 tentativas</span>
       </header>
+
+      <div class="cards-grid">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+      </div>
     </main>
   </body>
 </html>
