--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       </header>
 
       <div class="cards-grid">
-        <div class="card"></div>
+        <div class="card">
+          <span class="card-emoji">🤖</span>
+        </div>
         <div class="card"></div>
         <div class="card"></div>
         <div class="card"></div>
