--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <div class="card"></div>
         <div class="card"></div>
       </div>
+
+      <button class="button">Reiniciar</button>
     </main>
   </body>
 </html>
