--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="cards-grid">
         <div class="card">
-          <span class="card-emoji">🤖</span>
+          <span class="card-emoji">😎</span>
         </div>
         <div class="card"></div>
         <div class="card"></div>
