--- a/index.html
+++ b/index.html
@@ -23,29 +23,7 @@
         <span class="stats">0 acertos de 0 tentativas</span>
       </header>
 
-      <div class="cards-grid">
-        <div class="card">
-          <span class="card-emoji">😎</span>
-        </div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-      </div>
+      <div id="deck" class="cards-grid"></div>
 
       <button class="button">Reiniciar</button>
     </main>
