--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="game-container">
       <header class="game-header">
         <img src="./assets/logotipo.svg" alt="Logo do jogo" />
-        <span class="stats">0 acertos de 0 tentativas</span>
+        <span id="stats" class="stats">0 acertos de 0 tentativas</span>
       </header>
 
       <div id="deck" class="cards-grid"></div>
