--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div id="deck" class="cards-grid"></div>
 
-      <button class="button">Reiniciar</button>
+      <button id="restart" class="button">Reiniciar</button>
     </main>
 
     <script src="./scripts.js"></script>
